# everstaff

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  api-reference.md  architecture.md  getting-started.md  module-context.md  module-core.md  module-knowledge.md  module-permissions.md  module-server.md  module-skills.md  module-tools.md  module-tracing.md  module-workflow.md  session-stop-resume-and-workspace-files.md  usage.md
docs/designs/: 2026-03-07-sandbox-workspace-design.md  2026-03-10-feishu-minutes-tools-design.md
docs/guides/: sandbox-user-guide.md
docs/plans/: 2026-03-02-tool-permission-plan.md  2026-03-02-tool-permission-redesign.md  2026-03-05-sandbox-isolation-design.md  2026-03-05-sandbox-isolation-plan.md  2026-03-06-sandbox-session-design.md  2026-03-06-sandbox-session-plan.md  2026-03-07-daemon-capabilities-design.md  2026-03-07-daemon-capabilities-plan.md  2026-03-07-daemon-memory-redesign-plan.md  2026-03-07-daemon-memory-redesign.md  2026-03-07-mem0-ipc-proxy-design.md  2026-03-07-mem0-ipc-proxy-plan.md  2026-03-07-sandbox-secret-bridge-design.md  2026-03-07-sandbox-secret-bridge-plan.md  2026-03-08-larkws-refactor-design.md  2026-03-08-larkws-refactor-plan.md  2026-03-08-simplify-hitl-config-design.md  2026-03-08-unified-logging-design.md  2026-03-08-unified-logging-plan.md
docs/testing/: sandbox-ui-integration-test-results.md  sandbox-ui-integration-tests.md
scripts/: check-log-format.sh  migrate_sessions.py  release.sh  test_mem0.py
src/everstaff/: __init__.py  __main__.py  cli.py  nulls.py  project_context.py  protocols.py  scaffold.py  server.py  web_ui.py
tests/: conftest.py  test_nulls.py  test_project_context.py  test_protocols.py  test_public_api.py
tests/api/: test_agents_crud.py  test_app_sandbox.py  test_hitl_models.py  (+9 more)
web/: index.html  package-lock.json  package.json  vite.config.js
(+455 files in other folders)
