[project]
name = "everstaff"
version = "0.0.8.dev0"
description = "AI agents that know when to act and when to ask — autonomous by default, human-supervised when it counts."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yurii", email = "yuriiiz@gmail.com" },
]
keywords = ["agent", "llm", "ai", "autonomous", "hitl", "multi-agent"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "litellm>=1.50.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "mcp>=1.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=12.0",
    "apscheduler>=3.10,<4",
    "pyjwt[crypto]>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/yuriiiz/everstaff"
Repository = "https://github.com/yuriiiz/everstaff"

[project.optional-dependencies]
langfuse = ["langfuse>=3.0.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
lark = ["lark-oapi>=1.0,<2.0"]
all = [
    "everstaff[langfuse]",
    "everstaff[otel]",
    "everstaff[lark]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
everstaff = "everstaff.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "src/everstaff/web_static/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/everstaff"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py311"
line-length = 120
